FIX: some alignment and font issues

--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -1,4 +1,3 @@
-@import url("http://fonts.cdnfonts.com/css/sofia-pro");
 @import "antd/dist/antd.css";
 
 // variables
@@ -11,7 +10,12 @@
 
 // custom css
 * {
-  font-family: "Messina sans", sans-serif !important;
+  font-family: "messina-sans", sans-serif !important;
+}
+
+::selection {
+  color: $white !important;
+  background: rgba($theme-primary, 0.2);
 }
 
 *,
@@ -29,6 +33,7 @@ body {
   scroll-behavior: smooth;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  color: $theme-primary-dark;
 }
 
 #root {
@@ -51,57 +56,6 @@ p {
 
 .h-100 {
   height: 100%;
-}
-
-// Typography Style
-.title1,
-.title2,
-.title3,
-.title4,
-.title5,
-.title6 {
-  margin: 0;
-}
-
-.title1 {
-  font-size: 40px;
-  line-height: 45px;
-  font-weight: 700;
-}
-
-.title2 {
-  font-size: 36px;
-  line-height: 39px;
-  font-weight: 600;
-}
-
-.title3 {
-  font-size: 1.5rem;
-  line-height: 32px;
-  font-weight: 600;
-
-  // On mobile
-  @include mobile {
-    font-size: 1.3rem;
-  }
-}
-
-.title4 {
-  font-size: 1.3rem;
-  line-height: 39px;
-  font-weight: 600;
-}
-
-.title5 {
-  font-size: 1rem;
-  line-height: 20px;
-  font-weight: 600;
-}
-
-.title6 {
-  font-size: 0.875rem;
-  line-height: 20px;
-  font-weight: 600;
 }
 
 // Button Style here
@@ -197,8 +151,18 @@ p {
 
     .footer {
       border-left: 1px solid #DCC797;
-      margin-left: 79px;
+      margin-left: 49px;
       padding: 20px;
+      height: 127px;
+      display: flex;
+      justify-content: center;
+      flex-direction: column;
+    }
+
+    .copyright {
+      margin-bottom: 0;
+      font-size: 12px;
+      margin-top: 5px;
     }
   }
 }
