--- a/src/styles/_fonts.scss
+++ b/src/styles/_fonts.scss
@@ -3,7 +3,7 @@
 // // ######################################## //
 
 @font-face {
-  font-family: "Messina sans";
+  font-family: "messina-sans";
   font-style: normal;
   font-weight: 100;
   src: url("../assets/fonts/MessinaSansTrial-Hairline.otf"); /* IE9 Compat Modes */
@@ -11,7 +11,7 @@
 }
 
 @font-face {
-  font-family: "Messina sans";
+  font-family: "messina-sans";
   font-style: normal;
   font-weight: 200;
   src: url("../assets/fonts/MessinaSansTrial-Thin.otf"); /* IE9 Compat Modes */
@@ -19,49 +19,49 @@
 }
 
 @font-face {
-  font-family: "Messina sans";
+  font-family: "messina-sans";
   font-style: normal;
   font-weight: 300;
   src: url("../assets/fonts/MessinaSansTrial-Light.otf"); /* IE9 Compat Modes */
   src: url("../assets/fonts/MessinaSansTrial-Light.otf") format("truetype");
 }
 
-@font-face {
-  font-family: "Messina sans";
-  font-style: normal;
-  font-weight: 400;
-  src: url("../assets/fonts/MessinaSansTrial-Book.otf"); /* IE9 Compat Modes */
-  src: url("../assets/fonts/MessinaSansTrial-Book.otf") format("truetype");
-}
+// @font-face {
+//   font-family: "messina-sans";
+//   font-style: normal;
+//   font-weight: 400;
+//   src: url("../assets/fonts/MessinaSansTrial-Book.otf"); /* IE9 Compat Modes */
+//   src: url("../assets/fonts/MessinaSansTrial-Book.otf") format("truetype");
+// }
 
 @font-face {
-  font-family: "Messina sans";
+  font-family: "messina-sans";
   font-style: normal;
-  font-weight: 500;
+  font-weight: 400;
   src: url("../assets/fonts/MessinaSansTrial-Regular.otf"); /* IE9 Compat Modes */
   src: url("../assets/fonts/MessinaSansTrial-Regular.otf") format("truetype");
 }
 
 @font-face {
-  font-family: "Messina sans";
+  font-family: "messina-sans";
   font-style: normal;
-  font-weight: 600;
+  font-weight: 500;
   src: url("../assets/fonts/MessinaSansTrial-SemiBold.otf"); /* IE9 Compat Modes */
   src: url("../assets/fonts/MessinaSansTrial-SemiBold.otf") format("truetype");
 }
 
 @font-face {
-  font-family: "Messina sans";
+  font-family: "messina-sans";
   font-style: normal;
-  font-weight: 700;
+  font-weight: 600;
   src: url("../assets/fonts/MessinaSansTrial-Bold.otf"); /* IE9 Compat Modes */
   src: url("../assets/fonts/MessinaSansTrial-Bold.otf") format("truetype");
 }
 
 @font-face {
-  font-family: "Messina sans";
+  font-family: "messina-sans";
   font-style: normal;
-  font-weight: 800;
+  font-weight: 700;
   src: url("../assets/fonts/MessinaSansTrial-Black.otf"); /* IE9 Compat Modes */
   src: url("../assets/fonts/MessinaSansTrial-Black.otf") format("truetype");
 }
