--- a/src/styles/variables/_colors.scss
+++ b/src/styles/variables/_colors.scss
@@ -34,6 +34,7 @@ $textColor-dark :#1E265E;
 $borderColor: #EDF2F7;
 $shadowColor: #3232470D;
 $border-color: #EEE3D6;
+$border-color-2:#DCC797;
 
 // Theme Based
 $theme-light-color: #FF864E;
@@ -42,6 +43,7 @@ $theme-light-yellow: #FFE19A;
 $theme-pink: #FF85B3;
 $theme-light-pink: #FEDAD1;
 $theme-primary: #CF5F2B;
+$theme-primary-dark: #2E1500;
 $theme-secondary: #1C1C1C;
 
 // Color Shades
